--- a/src/sass/yn/use.module.scss
+++ b/src/sass/yn/use.module.scss
@@ -9,14 +9,6 @@
 
 
 
-.threeBanner {
-
-    // border: 1px solid black;
-    // border-radius: 2rem;
-    min-width: 1200px !important;
-}
-
-
 
 
 
@@ -57,8 +49,8 @@
 }
 
 .tab_img {
-    width: 700px;
-    height: 700px;
+    width: 600px;
+    height: 600px;
     box-shadow: 10px 10px 40px 5px rgb(0 0 0 / 20%);
     border-radius: 40px 0 40px 0;
 }
@@ -69,7 +61,6 @@
     font-style: italic;
     word-break: keep-all;
     color: red;
-
 }
 
 .tab_subspan {
@@ -77,12 +68,12 @@
 }
 
 .tab_w {
-    min-width: 850px;
-    padding: 5rem 0;
+    min-width: 630px;
+    padding: 2rem;
     box-shadow: 10px 10px 40px 5px rgb(0 0 0 / 20%);
     border-radius: 40px 0 40px 0;
     width: 50%;
-    margin-left: -50px;
+    margin-left: 50px;
     background-color: #fff;
     z-index: 999999;
     text-align: center;
@@ -100,9 +91,6 @@
     border-radius: 40px;
     border: 1px solid white;
     cursor: pointer;
-    padding: 2.8em 2rem;
-    max-height: 400px;
-    max-width: 400px;
     background: #0091ff;
     color: #fff;
     display: inline-block;
@@ -111,6 +99,9 @@
     right: 10%;
     text-align: left;
     word-break: keep-all;
+    padding: 2.8rem 2rem;
+    max-height: 400px;
+    max-width: 400px; 
 }
 
 /*use css*/
@@ -129,3 +120,43 @@
     text-decoration: none;
 
 }
+
+
+@media (max-width: 767px) {
+    .wrap{
+        font-size: 30px !important;
+    }
+    .threeBanner {
+      .content {
+        flex-direction: column;
+      }
+    }
+    .usebtn{
+        padding: 1.8rem 1rem !important;
+        margin-bottom: -7%;
+        max-height: 260px !important;
+        max-width: 400px !important;
+    
+    }
+    .tab_w{
+        margin-top: 7%;
+        margin-bottom: 4%;
+    }
+  }
+  @media (min-width: 768px) and (max-width: 991px) {
+    .usebtn {
+      padding: 2.3rem 1.5rem; 
+      font-size: 15px; 
+      max-height: 400px;
+      max-width: 400px;   
+  }
+  }
+  @media (min-width: 992px) and (max-width: 1200px) {
+    
+    .usebtn {
+      padding: 2.8rem 2rem; 
+      font-size: 17px;
+      max-height: 400px;
+      max-width: 400px;   
+    }
+  }
